--- a/app.json
+++ b/app.json
@@ -1,16 +1,16 @@
 {
   "configVersion": "v2",
   "app": {
-    "appId": 25516,
-    "appName": "hello world",
+    "appId": 692137,
+    "appName": "Google Tasks",
     "appType": "app",
     "version": {
       "code": 1,
       "name": "1.0.1"
     },
     "icon": "icon.png",
-    "vender": "zepp",
-    "description": "hello world app"
+    "vender": "R. Klimonda",
+    "description": "View and complete your Google Tasks on watch"
   },
   "permissions": [],
   "runtime": {
@@ -22,113 +22,6 @@
   },
   "debug": false,
   "targets": {
-    "gtr3-pro": {
-      "module": {
-        "page": {
-          "pages": [
-            "page/gtr3-pro/home/index.page"
-          ],
-          "window": {
-            "navigationBarBackgroundColor": "#ffffff",
-            "navigationBarTextStyle": "black",
-            "navigationBarTitleText": "Hello World",
-            "backgroundColor": "#eeeeee",
-            "backgroundTextStyle": "light"
-          }
-        },
-        "app-side": {
-          "path": "app-side/index"
-        },
-        "setting": {
-          "path": "setting/index"
-        }
-      },
-      "platforms": [
-        {
-          "name": "gtr3-pro",
-          "deviceSource": 229
-        },
-        {
-          "name": "gtr3-pro-w",
-          "deviceSource": 230
-        }
-      ],
-      "designWidth": 480
-    },
-    "gtr3": {
-      "module": {
-        "page": {
-          "pages": [
-            "page/gtr3/home/index.page"
-          ],
-          "window": {
-            "navigationBarBackgroundColor": "#ffffff",
-            "navigationBarTextStyle": "black",
-            "navigationBarTitleText": "Hello World",
-            "backgroundColor": "#eeeeee",
-            "backgroundTextStyle": "light"
-          }
-        },
-        "app-side": {
-          "path": "app-side/index"
-        },
-        "setting": {
-          "path": "setting/index"
-        }
-      },
-      "platforms": [
-        {
-          "name": "gtr3",
-          "deviceSource": 226
-        },
-        {
-          "name": "gtr3-w",
-          "deviceSource": 227
-        },
-        {
-          "name": "t-rex2",
-          "deviceSource": 418
-        },
-        {
-          "name": "t-rex2-w",
-          "deviceSource": 419
-        }
-      ],
-      "designWidth": 454
-    },
-    "gts3": {
-      "module": {
-        "page": {
-          "pages": [
-            "page/gts3/home/index.page"
-          ],
-          "window": {
-            "navigationBarBackgroundColor": "#ffffff",
-            "navigationBarTextStyle": "black",
-            "navigationBarTitleText": "Hello World",
-            "backgroundColor": "#eeeeee",
-            "backgroundTextStyle": "light"
-          }
-        },
-        "app-side": {
-          "path": "app-side/index"
-        },
-        "setting": {
-          "path": "setting/index"
-        }
-      },
-      "platforms": [
-        {
-          "name": "gts3",
-          "deviceSource": 224
-        },
-        {
-          "name": "gts3-w",
-          "deviceSource": 225
-        }
-      ],
-      "designWidth": 390
-    },
     "teide": {
       "module": {
         "page": {
@@ -161,11 +54,11 @@
         }
       ],
       "designWidth": 454
-    }
+    },
   },
   "i18n": {
     "en-US": {
-      "appName": "Hello World"
+      "appName": "Google Tasks"
     }
   },
   "defaultLanguage": "en-US"
