--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
       "code": 1,
       "name": "1.0.0"
     },
-    "appId": 692137,
+    "appId": 1019779,
     "appName": "Google Tasks",
     "icon": "icon.png",
     "vender": "R. Klimonda",
