--- a/env.js.example
+++ b/env.js.example
@@ -1,3 +1,4 @@
 // rename this file to env.js
 export const GOOGLE_API_CLIENT_ID = 'google-api-client-id-here';
 export const GOOGLE_API_CLIENT_SECRET = 'google-api-client-secret-here';
+export const GOOGLE_API_REDIRECT_URI = 'google-api-redirect-uri-secret-here';
