--- a/env.js.example
+++ b/env.js.example
@@ -2,3 +2,8 @@
 export const GOOGLE_API_CLIENT_ID = 'google-api-client-id-here';
 export const GOOGLE_API_CLIENT_SECRET = 'google-api-client-secret-here';
 export const GOOGLE_API_REDIRECT_URI = 'google-api-redirect-uri-secret-here';
+export const KPAY_CONFIG = {
+    id: 123456,
+    trialEnabled: true,
+    testMode: false,
+}
